Fix scrollbar styling

--- a/src/global.css
+++ b/src/global.css
@@ -6,21 +6,24 @@ body {
   @apply bg-[color:#020A0D] text-[color:#E1E1E6] xl:flex xl:flex-1 xl:items-center xl:justify-center xl:min-h-screen;
 }
 
-div::-webkit-scrollbar {
-  width: 14px;
-}
+@media (min-width: 1280px) {
+  ::-webkit-scrollbar {
+    width: 22px;
+  }
 
-div::-webkit-scrollbar-track {
-  background: transparent;
-  box-shadow: inset 0 0 14px 14px transparent;
-  border: solid 8px transparent;
-}
+  ::-webkit-scrollbar-thumb {
+    background: #4a808c;
+    background-clip: padding-box;
+    border: 8px solid transparent;
+    border-radius: 15px;
+  }
 
-div::-webkit-scrollbar-thumb {
-  /* background-color: #4a808c; */
-  box-shadow: inset 0 0 14px 14px #4a808c;
-  border-top: solid 6px transparent;
-  border-bottom: solid 6px transparent;
-  border-right: solid 8px transparent;
-  border-radius: 14px;
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    margin-top: 65px;
+  }
+
+  main {
+    overflow: overlay;
+  }
 }
